--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -52,11 +52,13 @@
             </div>
             <div class="mb-3">
                 <% campground.images.forEach(function(img, i) {  %>
+                <div>
                 <img src="<%=img.thumbnail %>" class="img-thumbnail" alt="">
                 <div class="form-check-inline">
                     <input type="checkbox" id="image-<%=i%>" name="deleteImages[]" value="<%=img.filename%>">
                 </div>
                 <label for="image-<%=i%>">Delete?</label>
+                </div>
                 <% })%>
             </div>
             <div class="mb-3">
