--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -13,7 +13,7 @@
                 <img  alt="" src="<%=campground.images[0].url%>" class="card-img-top placement" >
                 <% }else {%>
                 <img alt=""
-                    src="https://res.cloudinary.com/dvwb4lvge/image/upload/v1624998664/YelpCamp/dqgwow2ttqxyru4yripu.jpg" class="card-img-top placement" >
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/No_image_available.svg/600px-No_image_available.svg.png" class="card-img-top placement" >
                 <% } %>
         
             
